--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -5,52 +5,52 @@ on:
     branches: 
       - main
 
+permissions:
+  contents: read
+  packages: write
+  
 jobs:
   build_and_publish:
     runs-on: ubuntu-latest
 
     steps:
-    # 1. Vérifier le code du dépôt
+      - name: set lower case repo name
+        run: echo "REPO_LC=${REPO,,}" >>${GITHUB_ENV}
+        env:
+          REPO: '${{ github.repository }}'
     
-      name: Checkout repository
-          uses: actions/checkout@v3
+   
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-          # 2. Se connecter au registre Docker de GitHub Packages
+         
+      - name: Log in to GitHub Docker Registry/Packages
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
           
-      name: Log in to GitHub Docker Registry/Packages
-          uses: docker/login-action@v2
-          with:
-            registry: ghcr.io
-            username: ${{ github.actor }}
-            password: ${{ secrets.GITHUB_TOKEN }}
-
-          # 3. Construire l'image Docker
-          
-      name: Build Docker image
-          run: |
-            docker build -t ghcr.io/${{ github.repository }}/my-app:latest .
+      - name: Build Docker image
+        run: docker build -t ghcr.io/$REPO_LC:latest . 
+            
         # 4. Publier l'image Docker sur GitHub Packages
-      name: Publish Docker image
-        run: |
-          docker push ghcr.io/${{ github.repository }}/my-app:latest
+      - name: Publish Docker image
+        run: docker push ghcr.io/$REPO_LC:latest
 
-        deploy:
-          needs: build_and_publish
-          runs-on: ubuntu-latest
+  # deploy on azure
+  # deploy:
+  #   needs: build_and_publish
+  #   runs-on: ubuntu-latest
 
-          steps:
-          # 1. Vérifier le code du dépôt
+  #   steps:
+  #         # 1. Vérifier le code du dépôt
           
-            name: Checkout repository
-                uses: actions/checkout@v3
+  #     - name: Checkout repository
+  #       uses: actions/checkout@v3
 
-                # 2. Déployer l'application (exemple avec SSH sur un serveur distant)
+  #     # 2. Déployer l'application (exemple avec SSH sur un serveur distant)
                 
-            name: Deploy to server
-                run: |
-                  ssh -o StrictHostKeyChecking=no -i ${{ secrets.SSH_PRIVATE_KEY }} user@server_address << 'EOF'
-                    docker pull ghcr.io/${{ github.repository }}/my-app:latest
-                    docker stop my-app  true
-                    docker rm my-app  true
-                    docker run -d --name my-app -p 80:80 ghcr.io/${{ github.repository }}/my-app:latest
-                  EOF
+  #     - name: TEST Deploy to server
+  #       run: |
+  #         echo "Deploying to server..."
